# poly_bot

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-gce.yml  deploy-gke.yml
benches/: local_quote.rs
config/strategies/: usdc-wld-world-chain.v1.json  usdc-wld-world-chain.v10.json  usdc-wld-world-chain.v11.json  usdc-wld-world-chain.v12.json  usdc-wld-world-chain.v2.json  usdc-wld-world-chain.v3.json  usdc-wld-world-chain.v4.json  usdc-wld-world-chain.v5.json  usdc-wld-world-chain.v6.json  usdc-wld-world-chain.v7.json  usdc-wld-world-chain.v8.json  usdc-wld-world-chain.v9.json
docs/: adaptive-arbitrage-sizing.md  arb-bot-rust-migration.md  arbitrage-results.md  balance-synchronization.md  binance-order-execution.md  binance-price-telemetry-2026-07-23.md  binance-price-telemetry.md  binance-runtime.md  concurrent-execution.md  domain-configuration.md  gcp-local-auth.md  gke-deployment.md  low-latency-dex-quoting.md  production-validation.md  rails-binance-capital-parity.md  rails-test-gap-analysis.md  rails-wallet-parity.md  rebalancing.md  rust-production-architecture.md  rust-rails-comparison-2026-07-23.md  singapore-infrastructure.md  trading-runbook.md  uniswap-execution.md  usdt-aed-arbitrage-validation.md
infra/gcp/: cloudbuild.yaml  gce-binance-test-startup.sh  gce-startup.sh  workloads.example.json
infra/gcp/gke/: deployment.yaml  node-system-config.yaml  platform.yaml  release-platform.yaml
infra/gcp/monitoring/: binance-depth-unhealthy-log-metric.json  rebalance-fault-log-metric.json  rebalance-fault-policy.json  rebalance-heartbeat-log-metric.json  rebalance-heartbeat-missing-policy.json  trading-inventory-blocked-log-metric.json  trading-inventory-blocked-policy.json
scripts/: apply-gcp-rebalance-monitoring  compare-arbitrage-results  create-gce-binance-test-vm  create-gce-worker  create-gke-node-pool  create-gke-runtime  deploy-gcp-worker  gce-binance-test  gcloud-local  quality.sh  read-rails-pair-config  sync-gcp-secrets  sync-rails-chain-rpc  update-gce-binance-test-image  update-gce-worker  watch-arbitrage-results
scripts/sql/: rails_arbitrage_comparison.sql  rails_pair_config.sql
src/: across.rs  admission.rs  arbitrage.rs  balances.rs  config.rs  engine.rs  execution_accounting.rs  execution_plan.rs  hot_telemetry.rs  inventory.rs  lib.rs  live_execution.rs  main.rs  opportunity.rs  state.rs  telemetry.rs  wallet.rs
src/binance/: account.rs  capital.rs  depth.rs  execution.rs  mod.rs  order_journal.rs  order_plan.rs  sub_account.rs  user_data.rs  validation.rs  ws_api.rs
src/chain/: logs.rs  mod.rs  rpc.rs
src/dex/: calldata.rs  clmm.rs  events.rs  execution.rs  hydration.rs  mirror.rs  mod.rs  pool_id.rs  validation.rs
src/domain/: config.rs
src/market_data/: alchemy.rs  binance.rs  mod.rs
src/rebalance/: executor.rs  journal.rs  mod.rs  planner.rs  runtime.rs  tracker.rs
src/wallet/: journal.rs  nonce.rs
tests/: gke_deployment_config.rs  monitoring_config.rs
