[package]
name = "poly_bot"
version = "0.1.0"
edition = "2024"
description = "Low-latency BTC 5-minute Up/Down trading service for Polymarket"
publish = false

[dependencies]
anyhow = "1.0"
bytes = "1.10"
ch_client = { package = "clickhouse", version = "0.15.1", default-features = false, features = ["lz4", "rustls-tls-ring", "rustls-tls-webpki-roots"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
