[package]
name = "arb_bot"
version = "0.1.0"
edition = "2024"
description = "Low-latency side-by-side Rust clone of arb_bot"
publish = false

[dependencies]
anyhow = "1.0"
alloy-primitives = "1.3"
bytes = "1.10"
ch_client = { package = "clickhouse", version = "0.15.1", default-features = false, features = ["lz4", "rustls-tls-ring", "rustls-tls-webpki-roots"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
rust_decimal = "1.42.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.11.0", default-features = false }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uniswap_v3_math = "0.6.2"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[[bench]]
name = "local_quote"
harness = false
